apps/homenw/overlays/home/adguard-service.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: adguard-home-service
subsets:
- addresses:
  - ip: 10.2.1.1
  ports:
  - port: 8000
    name: http
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-service
spec:
  ports:
  - port: 8000
    name: http
    protocol: TCP
