apps/homenw/overlays/home/ap-service.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: ap-archer-service
subsets:
- addresses:
  - ip: 10.0.255.1
  ports:
  - port: 80
    name: http
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: ap-archer-service
spec:
  ports:
  - port: 80
    name: http
    protocol: TCP
