apps/homenw/overlays/home/router-service.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: router-rtx1210-service
subsets:
- addresses:
  - ip: 10.0.0.1
  ports:
  - port: 80
    name: http
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: router-rtx1210-service
spec:
  ports:
  - port: 80
    name: http
    protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: router-bbunit-service
subsets:
- addresses:
  - ip: 172.16.255.254
  ports:
  - port: 80
    name: http
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: router-bbunit-service
spec:
  ports:
  - port: 80
    name: http
    protocol: TCP
