apps/homenw/overlays/home/switch-service.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: switch-x510-service
subsets:
- addresses:
  - ip: 10.3.100.100
  ports:
  - port: 443
    name: https
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: switch-x510-service
spec:
  ports:
  - port: 443
    name: https
    protocol: TCP
